refactor: downgrade java from 21 to 17
- Replace Java 21 Sequenced Collections API (getFirst/getLast) with Java 17 compatible calls
- Replace pattern matching switch expressions with instanceof checks
- Update gradle.properties to use Java 17
- Remove unnecessary blank lines in test files